<resources>
    <string name="app_name">VoodooTVDB</string>

    <string name="font_roboto_bold">Roboto-Bold.ttf</string>
    <string name="font_roboto_light">Roboto-Light.ttf</string>
    <string name="font_roboto_light_italic">Roboto-LightItalic.ttf</string>
    <string name="font_roboto_medium">Roboto-Medium.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>
    <string name="font_roboto_thin">Roboto-Thin.ttf</string>

    <string name="action_settings">Settings</string>

    <string name="user_avatar_image">user avatar image</string>

    <string name="login_bg_image">login background image</string>
    <string name="login_username_hint">Trakt Username or Email</string>
    <string name="login_password_hint">Trakt Password</string>
    <string name="login_powered_by_trakt">Powered By Trakt.tv</string>
    <string name="login_trakt_icon">trakt_icon</string>
    <string name="login_button">Login</string>
    <string name="login_success">Success</string>

    <string name="error_generic_network">Please check your network connection.</string>
    <string name="error_icon">Error Icon</string>
    <string name="error_generic_retry">An error occurred. Tap here to retry.</string>
    <string name="error_server_overloaded">server overloaded</string>

    <string name="feature_image">Feature Image</string>

    <string name="card_more">card more</string>
    <string name="card_image">card image</string>

    <string name="show">Show</string>
    <string name="show_parallax_image">show parallax image</string>
    <string name="show_starring">Starring:</string>
    <string name="show_titles_related_to">Titles Related to</string>

    <string name="person">Person</string>
    <string name="person_born">Born:</string>
    <string name="person_died">Died:</string>
    <string name="person_roles_small_screen">Roles on Shows</string>
    <string name="person_roles_big_screen">Roles on Movies</string>

    <string name="movie">Movie</string>
    <string name="movie_parallax_image">move fan art</string>

    <string name="staring">Staring</string>

    <string name="season">"Season"</string>
    <string name="season_extras">"Extras"</string>
    <string name="menu_season_watched_all">Watched All</string>

    <string-array name="search_types">
        <item>All</item>
        <item>Show</item>
        <item>Movie</item>
        <item>Person</item>
    </string-array>
    <string name="search">Search</string>
    <string name="search_hint">Search for shows, movies, and people…</string>
    <string name="search_more">More</string>

    <string name="favorites_empty">Create lists to track movies, shows, season, episodes, and people.</string>
    <string name="empty_text">No results found</string>
    <string name="list_empty">You can add Show, Movies, Episodes, etc. to your lists by tapping on the + button.</string>
    <string name="tba">TBA</string>
    <string name="no_overview_available">No overview available</string>
    <string name="watchlist">Watchlist</string>
    <string name="lists">Lists</string>
    <string name="done">Done</string>
    <string name="nah">Nah</string>
    <string name="create">Create</string>

</resources>
